[gd_scene load_steps=4 format=3 uid="uid://buqujgoglb2u"]

[ext_resource type="Script" uid="uid://bh5s28uqn3df6" path="res://tool_wheel/tool_wheel.gd" id="1_md3vk"]
[ext_resource type="Script" uid="uid://dbmvfr17vscbx" path="res://tool_wheel/button.gd" id="2_2utwo"]

[sub_resource type="Theme" id="Theme_qo6qr"]
Button/constants/outline_size = 10
Button/font_sizes/font_size = 20

[node name="ToolWheel" type="Node2D"]
script = ExtResource("1_md3vk")

[node name="RandomPlushie" type="Button" parent="."]
offset_left = -75.0
offset_top = -89.0
offset_right = 90.0
offset_bottom = -53.0
theme = SubResource("Theme_qo6qr")
text = "Random Plushie"
flat = true
script = ExtResource("2_2utwo")

[node name="SendMessage" type="Button" parent="."]
offset_left = -150.0
offset_top = -178.0
offset_right = 15.0
offset_bottom = -142.0
theme = SubResource("Theme_qo6qr")
text = "Send Message"
flat = true
script = ExtResource("2_2utwo")

[node name="Games" type="Node" parent="."]

[node name="Basketball" type="Button" parent="Games"]
offset_left = 98.0
offset_top = -18.0
offset_right = 207.0
offset_bottom = 18.0
theme = SubResource("Theme_qo6qr")
text = "Plushieball
"
flat = true
script = ExtResource("2_2utwo")

[node name="Tournament" type="Button" parent="Games"]
offset_left = -230.0
offset_top = -19.0
offset_right = -101.0
offset_bottom = 17.0
theme = SubResource("Theme_qo6qr")
text = "Tournament
"
flat = true
script = ExtResource("2_2utwo")

[node name="GameManagement" type="Node" parent="."]

[node name="CancelGame" type="Button" parent="GameManagement"]
offset_left = 29.0
offset_top = 50.0
offset_right = 163.0
offset_bottom = 86.0
theme = SubResource("Theme_qo6qr")
text = "Cancel Game"
flat = true
script = ExtResource("2_2utwo")

[node name="ExtendGame" type="Button" parent="GameManagement"]
offset_left = -154.0
offset_top = 49.0
offset_right = -22.0
offset_bottom = 85.0
theme = SubResource("Theme_qo6qr")
text = "ExtendGame"
flat = true
script = ExtResource("2_2utwo")

[connection signal="activated" from="RandomPlushie" to="." method="random_plushie"]
[connection signal="activated" from="SendMessage" to="." method="send_message"]
[connection signal="activated" from="Games/Basketball" to="." method="plushieball"]
[connection signal="activated" from="Games/Tournament" to="." method="plushieball_tournament"]
[connection signal="activated" from="GameManagement/CancelGame" to="." method="cancel_current_game"]
[connection signal="activated" from="GameManagement/ExtendGame" to="." method="extend_current_game"]
